# SimdUtils

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt
SimdUtils/: CMakeLists.txt
SimdUtils/types/: CMakeLists.txt
SimdUtils/types/benchmark/: CMakeLists.txt  ScalarBench.cpp
SimdUtils/types/src/: CMakeLists.txt
SimdUtils/types/src/types/: Matrix.h  Scalar.h  Vector.h
SimdUtils/types/test/: CMakeLists.txt  MatrixTest.cpp  ScalarTest.cpp  VectorTest.cpp
